--- a/thank.html
+++ b/thank.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="index, follow">
-    <meta name="description" content="Страница оповещающая, что письмо отправлено на почту студии дизайна интерьера.">
-    <meta name="keywords" content="галерея, дизайн интерьера, проекты, фото">
-    <meta name="author" content="Та самая">
+    <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="robots" content="index, follow">
+	<meta name="description" content="Студия дизайна интерьера 'ТА САМАЯ' предлагает уникальные решения для вашего дома и офиса. Мы создаем функциональные и эстетически приятные интерьеры, которые отражают ваш стиль и характер.Если вы мечтаете о квартире с интуитивно понятной системой освещения, сауной и джакузи, или хотите создать уникальное пространство в старом фонде — мы знаем, как это сделать!">
+	<meta name="keywords" content="дизайн, дизайн интерьера, оформление интерьера, интерьерный дизайн, дизайнерский проект, 
+	квартиры, дома, офисы, ремонт, создание интерьеров, современные интерьеры, креативные решения, экологичный дизайн, стильный интерьер, освещение, архитектурные решения, уникальные проекты, индивидуальный дизайн, перепланировка, 
+	дизайн-проект, дизайнерские идеи, уютные интерьеры, стильная мебель, модерн, классический стиль, минимализм, эко-стиль, интерьер для бизнеса, улучшение пространства, Санкт-Петербург, Москва">
+	<meta name="author" content="Студия дизайна интерьера 'Та самая'">
     <title>Запрос отправлен</title>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXX-X"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-XXXXXXX-X');
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/XXXXXX" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<link rel="icon" href="logo/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="logo/favicon-32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="logo/favicon-16x16.png" sizes="16x16" type="image/png">
+	<link rel="apple-touch-icon" href="logo/apple-touch-icon.png" sizes="180x180">
+    <link rel="android-touch-icon" href="logo/android-chrome-192x192.png" sizes="192x192">
+	<link rel="android-touch-icon" href="logo/android-chrome-512x512.png" sizes="512x512">
 	
     <style>
 		@font-face {
