--- a/Index.html
+++ b/Index.html
@@ -376,29 +376,28 @@
     </form>
 </div>
 	<script>
-    document.getElementById('myForm3').addEventListener('submit', async function(event) {
-    event.preventDefault();
+		document.getElementById('signup-form').addEventListener('submit', async function(event) {
+		event.preventDefault();
 		
-		const formData = new FormData(event.target);
-		const data = {};
-		formData.forEach((value, key) => data[key] = value);
+		const spinner = document.getElementById('loadingSpinner');
+		spinner.style.display = 'block';
 
-			try {
-			  const response = await fetch('/.netlify/functions/send-email', {
-				method: 'POST',
-				headers: {
-				  'Content-Type': 'application/json',
-				},
-				body: JSON.stringify(data),
-			  });
+		const name = document.getElementById('name').value;
+		const phone = document.getElementById('phone').value;
+		const message = document.getElementById('message').value;
 
-			  const result = await response.json();
-			  alert(result.message);
-			} catch (error) {
-			  console.error('Ошибка при отправке формы:', error);
-			  alert('Произошла ошибка при отправке сообщения.');
-			}
-		  });
+		const response = await fetch('/.netlify/functions/signup', {
+		method: 'POST',
+		body: JSON.stringify({ name, phone, message }),
+		headers: { 'Content-Type': 'application/json' }
+		});
+
+		if (response.ok) {
+		alert('Signed up successfully!');
+		} else {
+		alert('Failed to sign up.');
+		}
+		});
 		
 		spinner.style.display = 'none';
 	</script>
