Normalize line endings to LF

--- a/Index.html
+++ b/Index.html
@@ -53,7 +53,7 @@
 	</script>
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
-	   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a[]).push(arguments)};
+	   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
 	   m[i].l=1*new Date();
 	   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
 	   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
@@ -142,13 +142,13 @@
             <div class="popup-image-container" id="popup-image-container">
                 <img src="Image/101.jpg" alt="Image 101" class="popup-slider-image">
                 <img src="Image/102.jpg" alt="Image 102" class="popup-slider-image">
-                <img src="Image/103.png" alt="Image 103" class="popup-slider-image">
+                <img src="Image/103.jpg" alt="Image 103" class="popup-slider-image">
                 <img src="Image/104.jpg" alt="Image 104" class="popup-slider-image">
                 <img src="Image/105.jpg" alt="Image 105" class="popup-slider-image">
                 <img src="Image/106.jpg" alt="Image 106" class="popup-slider-image">
 				<img src="Image/201.jpg" alt="Image 201" class="popup-slider-image">
                 <img src="Image/202.jpg" alt="Image 202" class="popup-slider-image">
-                <img src="Image/203.png" alt="Image 203" class="popup-slider-image">
+                <img src="Image/203.jpg" alt="Image 203" class="popup-slider-image">
                 <img src="Image/204.jpg" alt="Image 204" class="popup-slider-image">
                 <img src="Image/205.jpg" alt="Image 205" class="popup-slider-image">
                 <img src="Image/206.jpg" alt="Image 206" class="popup-slider-image">
@@ -156,13 +156,13 @@
 				<img src="Image/208.jpg" alt="Image 208" class="popup-slider-image">
 				<img src="Image/301.jpg" alt="Image 301" class="popup-slider-image">
                 <img src="Image/302.jpg" alt="Image 302" class="popup-slider-image">
-                <img src="Image/303.png" alt="Image 303" class="popup-slider-image">
+                <img src="Image/303.jpg" alt="Image 303" class="popup-slider-image">
                 <img src="Image/304.jpg" alt="Image 304" class="popup-slider-image">
                 <img src="Image/305.jpg" alt="Image 305" class="popup-slider-image">
                 <img src="Image/306.jpg" alt="Image 306" class="popup-slider-image">
 				<img src="Image/401.jpg" alt="Image 401" class="popup-slider-image">
                 <img src="Image/402.jpg" alt="Image 402" class="popup-slider-image">
-                <img src="Image/403.png" alt="Image 403" class="popup-slider-image">
+                <img src="Image/403.jpg" alt="Image 403" class="popup-slider-image">
                 <img src="Image/404.jpg" alt="Image 404" class="popup-slider-image">
                 <img src="Image/405.jpg" alt="Image 405" class="popup-slider-image">
                 <img src="Image/406.jpg" alt="Image 406" class="popup-slider-image">
@@ -170,7 +170,7 @@
 				<img src="Image/408.jpg" alt="Image 408" class="popup-slider-image">
 				<img src="Image/501.jpg" alt="Image 501" class="popup-slider-image">
                 <img src="Image/502.jpg" alt="Image 502" class="popup-slider-image">
-                <img src="Image/503.png" alt="Image 503" class="popup-slider-image">
+                <img src="Image/503.jpg" alt="Image 503" class="popup-slider-image">
                 <img src="Image/504.jpg" alt="Image 504" class="popup-slider-image">
                 <img src="Image/505.jpg" alt="Image 505" class="popup-slider-image">
                 <img src="Image/506.jpg" alt="Image 506" class="popup-slider-image">
@@ -178,21 +178,21 @@
 				<img src="Image/508.jpg" alt="Image 508" class="popup-slider-image">
 				<img src="Image/601.jpg" alt="Image 601" class="popup-slider-image">
                 <img src="Image/602.jpg" alt="Image 602" class="popup-slider-image">
-                <img src="Image/603.png" alt="Image 603" class="popup-slider-image">
+                <img src="Image/603.jpg" alt="Image 603" class="popup-slider-image">
                 <img src="Image/604.jpg" alt="Image 604" class="popup-slider-image">
                 <img src="Image/605.jpg" alt="Image 605" class="popup-slider-image">
                 <img src="Image/606.jpg" alt="Image 606" class="popup-slider-image">
 				<img src="Image/607.jpg" alt="Image 607" class="popup-slider-image">
 				<img src="Image/701.jpg" alt="Image 701" class="popup-slider-image">
                 <img src="Image/702.jpg" alt="Image 702" class="popup-slider-image">
-                <img src="Image/703.png" alt="Image 703" class="popup-slider-image">
+                <img src="Image/703.jpg" alt="Image 703" class="popup-slider-image">
                 <img src="Image/704.jpg" alt="Image 704" class="popup-slider-image">
                 <img src="Image/705.jpg" alt="Image 705" class="popup-slider-image">
                 <img src="Image/706.jpg" alt="Image 706" class="popup-slider-image">
 				<img src="Image/707.jpg" alt="Image 707" class="popup-slider-image">
 				<img src="Image/801.jpg" alt="Image 801" class="popup-slider-image">
                 <img src="Image/802.jpg" alt="Image 802" class="popup-slider-image">
-                <img src="Image/803.png" alt="Image 803" class="popup-slider-image">
+                <img src="Image/803.jpg" alt="Image 803" class="popup-slider-image">
                 <img src="Image/804.jpg" alt="Image 804" class="popup-slider-image">
                 <img src="Image/805.jpg" alt="Image 805" class="popup-slider-image">
                 <img src="Image/806.jpg" alt="Image 806" class="popup-slider-image">
@@ -328,7 +328,7 @@
 		  <p class="contact-info">
 			Если у вас появились срочные вопросы, то можете связаться с нами по номеру телефона:</p> 
 				<div class="colum"><strong class="phone">+7(911)-905-33-32</strong>
-				<div class="button-container"><button type="submit" class="submit-button">ОБСУДИТЬ ПРОЕКТ</button></div>
+				<div class="submit-button dop_pad"><button type="submit">ОБСУДИТЬ ПРОЕКТ</button></div>
 	    	</div>
     </form>
   </div>
@@ -338,7 +338,7 @@
 	<h3 id="realization" class="title_for_blocks dopoln_raz">ЭТАП РЕАЛИЗАЦИИ ВМЕСТЕ С НАМИ</h3>
 	 <div class="container">
         <!-- Первая карточка -->
-        <div class="card-wrapper" onclick="toggleText(this)">
+        <div class="card-wrapper">
       <div class="card">
         <img src="Image/Author.png" alt="Картинка 1"><div class="card-title pos_rig">АВТОРСКИЙ НАДЗОР<br>Сделай сам, а мы подскажем!</div>
       </div>
@@ -355,7 +355,7 @@
     </div>
 
     <!-- Карточка 2 -->
-    <div class="card-wrapper" onclick="toggleText(this)">
+    <div class="card-wrapper">
       <div class="card">
         <img src="Image/management.png" alt="Картинка 2"><div class="card-title pos_lef">МЕНЕДЖМЕНТ<br>Мы сделаем все за тебя!</div><p></p>
       </div>
@@ -366,6 +366,7 @@
       </div>
     </div>
 	</div>
+	
 	<div class="The_form">
     <img class="photo2" src="Image/form.jpg" alt="общая форма">
     <form id="myForm3" class="colum">
@@ -374,7 +375,7 @@
         <input class="dop_color" type="tel" id="phone3" name="phone" placeholder="Телефон/ Телеграмм для связи" required>
         <textarea class="dop_color" id="message3" name="message" placeholder="Сообщение для нас:"></textarea>
         <div id="loadingSpinner" style="display:none;">Загрузка...</div>
-        <button type="submit" id="submitButton" class="submit-button padding4">ОБСУДИТЬ ПРОЕКТ</button>
+        <div class="submit-button padding4"><button type="submit" id="submitButton">ОБСУДИТЬ ПРОЕКТ</button></div>
     </form>
 </div>
 
@@ -391,7 +392,7 @@
 	</div>
 	</div>
 	<footer>
-		<div class="row2 center"><h4 class="Ta_samaya">ТА САМАЯ</h4><div class="row_for_messenger">
+		<div class="row3 center"><h4 class="Ta_samaya">ТА САМАЯ</h4><div class="row_for_messenger">
 			<a href="https://t.me/Lukia_Sokolova" target="_blank" >
 				<img src="Image/telegram.png" alt="Иконка телеграма"></a>
 			<a class="phone-link" href="tel:+79119053332" target="_blank">
@@ -405,7 +406,7 @@
 				<img src="Image/instagram.png" alt="Иконка инстаграмма"></a>
 		</div></div>
 		<div class="line"></div>
-		<div class="row2 center marging_footer_text">
+		<div class="row2 center2 marging_footer_text">
 			<div class="colum"><p class="text_footer">
 				ООО «ЛУЧ»<br>ОГРН 1197547235332<br>ИНН 7813641324<br>Юр. Адрес: 197198, г. Санкт-Петербург, Введенская ул., 22<br>Р/с № 40702810610000602328<br>АО «Тинькофф Банк»<br>К\с 30101810145250000974<br>БИК 044525974<br>
 			</p><p class="text_footer">&copy; <span id="year"></span> Та самая. Все права защищены.</p></div>
